--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css"/>
     <title>Phu Lucas Resume</title>
 </head>
-    <h1 id="menu_text">My Resume</h1>
+    <h1 id="menu_text">My First Website</h1>
     
     <nav>
         <a href="#contact" class="menu_left">About</a>
