--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="My resume website">
+    <meta name="description" content="My First website">
     <meta name="developer" content="PhuLucas">
     <meta name="country" content="VietNam">
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css"/>
-    <title>Phu Lucas Resume</title>
+    <title>Phu Lucas Website</title>
 </head>
     <h1 id="menu_text">My First Website</h1>
     
