--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
             <p>Facebook: <a href="https://www.facebook.com/phulucas2005"> Phú Lucas</a></p>
             <p>Youtube: <a href="https://www.youtube.com/channel/UCc-sxXk4vatqxx3kLLFlgGw"> Phú Lucas</a></p>
             <p>Instagram: <a href="https://www.instagram.com/phulucas1806/"> phulucas1806</a></p>
-        </div>    
+        </div>   
 
         <div id="right_side">
-            <h2 id="course">Online Course</h2>
+            <h2 id="course">Kỷ Yếu</h2>
             <div id="course_container">
                 <div class="course_item">
                     <img class="course_img" src="asset/mẫu giáo.jpg"/>
